--- a/bp.html
+++ b/bp.html
@@ -37,7 +37,7 @@
   </head>
   <body>
     <canvas id="glCanvas"></canvas>
-
+    <a href="cv.html">CV</a>
     <div class="container">
       <h1>Best Practices</h1>
       <div id="practices-list">
