--- a/cv.html
+++ b/cv.html
@@ -36,6 +36,7 @@
   </head>
   <body>
     <canvas id="glCanvas"></canvas>
+    <a href="bp.html">Best Practice</a>
 
     <div class="container">
       <h1>Curriculum Vitae</h1>
