--- a/bp.html
+++ b/bp.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+    <!-- import libraries -->
     <script src="https://cdn.jsdelivr.net/npm/three@0.137.5/build/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.137.5/examples/js/controls/OrbitControls.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/dat.gui@0.7.7/build/dat.gui.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -31,24 +31,87 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" , href="css/bp.css" />
-
-
     <title>Best Practices</title>
   </head>
   <body>
+    <!-- Shader background canvas -->
     <canvas id="glCanvas"></canvas>
-    <a href="cv.html">CV</a>
-    <div class="container">
-      <h1>Best Practices</h1>
-      <div id="practices-list">
-        <!-- Best practices will be dynamically added here -->
-      </div>
-      <div id="summary">
-        <h2>Summary</h2>
-        <p id="summary-text"></p>
-        <div id="animal-picture"></div>
+    <!-- Top Navigation Bar -->
+    <nav id="topnav">
+      <!-- <a href="#">Best Practices</a> -->
+      <ul>
+        <li><a href="#html-section">HTML</a></li>
+        <li><a href="#css-section">CSS</a></li>
+        <li><a href="#javascript-section">JavaScript</a></li>
+        <li><a href="#additional-section">Additional</a></li>
+        <li><a href="cv.html">CV</a></li>
+        <li><a href="#ref-section">References</a></li>
+      </ul>
+    </nav>
+
+    <!-- Main Layout -->
+    <div class="main">
+        <!-- Sidebar -->
+        <button id="toggle-sidebar-btn" class="btn btn-dark">
+          &#171;
+          <!-- Left arrow icon -->
+        </button>
+        <nav id="sidebar">
+            <ul id="sidelist">
+              <li><a href="#html-section">HTML</a></li>
+              <li><a href="#css-section">CSS</a></li>
+              <li><a href="#javascript-section">JavaScript</a></li>
+              <li><a href="#additional-section">Additional</a></li>
+            </ul>
+        </nav>
+
+        <!-- Main Content -->
+        <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
+          <h1>Best Agile Practices</h1>
+          <section id="html-section">
+            <h2>HTML Section</h2>
+            <p>Content related to HTML goes here.</p>
+          </section>
+          <section id="css-section">
+            <h2>CSS Section</h2>
+            <p>Content related to CSS goes here.</p>
+          </section>
+          <section id="javascript-section">
+            <h2>JavaScript Section</h2>
+            <p>Content related to JavaScript goes here.</p>
+          </section>
+          <section id="additional-section">
+            <h2>Additional Section</h2>
+            <p>Content related to additional topics like shaders goes here.</p>
+          </section>
+
+          <div class="container">
+            <div id="practices-list">
+              <!-- Best practices will be dynamically added here -->
+            </div>
+            <div id="summary">
+              <h2>Summary</h2>
+              <p id="summary-text"></p>
+              <div id="animal-picture"></div>
+              <div
+                class="progress"
+                role="progressbar"
+                aria-label="Animated striped example"
+                aria-valuenow="75"
+                aria-valuemin="0"
+                aria-valuemax="100"
+              >
+                <div
+                  class="progress-bar progress-bar-striped progress-bar-animated"
+                  style="width: 100%"
+                ></div>
+              </div>
+            </div>
+          </div>
+        </main>
       </div>
     </div>
+
     <script type="text/javascript" src="js/shader1.js"></script>
     <script type="text/javascript" src="js/bp.js"></script>
   </body>
