--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+    <!-- import libraries -->
     <script src="https://cdn.jsdelivr.net/npm/three@0.137.5/build/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.137.5/examples/js/controls/OrbitControls.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/dat.gui@0.7.7/build/dat.gui.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -18,8 +18,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/dat.gui@0.7.7/build/dat.gui.min.css"
     />
-    <link rel="stylesheet" , href="css/cv.css" />
-    <!-- <link
+    <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css"
       integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
@@ -30,54 +29,85 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap-theme.min.css"
       integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp"
       crossorigin="anonymous"
-    /> -->
-
-    <title>CV</title>
+    />
+    <link rel="stylesheet" , href="css/bp.css" />
+    <title>Best Practices</title>
   </head>
   <body>
+    <!-- Shader background canvas -->
     <canvas id="glCanvas"></canvas>
-    <a href="bp.html">Best Practice</a>
+    <!-- Top Navigation Bar -->
+    <nav id="topnav">
+      <ul>
+        <li><a href="#html-section">HTML</a></li>
+        <li><a href="#css-section">CSS</a></li>
+        <li><a href="#javascript-section">JavaScript</a></li>
+        <li><a href="#additional-section">Additional</a></li>
+        <li><a href="cv.html">CV</a></li>
+        <li><a href="#ref-section">References</a></li>
+      </ul>
+    </nav>
 
-    <div class="container">
-      <h1>Curriculum Vitae</h1>
-      <div class="cv-section">
-        <h2>Biography</h2>
-        <p>Placeholder for biography text...</p>
-        <img src="icons/logo.png" alt="Your Photo" width="100px" class="img-fluid" />
+    <!-- Sidebar -->
+    <nav id="sidebar" class="toggle">
+      <ul id="sidelist">
+        <li><a href="#html-section">HTML</a></li>
+        <li><a href="#css-section">CSS</a></li>
+        <li><a href="#javascript-section">JavaScript</a></li>
+        <li><a href="#additional-section">Additional</a></li>
+        <li><a href="#ref-section">References</a></li>
+      </ul>
+      <button id="toggle-sidebar-btn" class="btn btn-dark">
+        <img id="arrow" class="toggle" src="icons/arrow.svg" alt="Toggle Sidebar"/>
+      </button>
+    </nav>
+
+    <!-- Main Content -->
+    <main>
+      <h1>Best Agile Practices</h1>
+      <section id="html-section">
+        <h2>HTML Section</h2>
+        <p>Content related to HTML goes here.</p>
+      </section>
+      <section id="css-section">
+        <h2>CSS Section</h2>
+        <p>Content related to CSS goes here.</p>
+      </section>
+      <section id="javascript-section">
+        <h2>JavaScript Section</h2>
+        <p>Content related to JavaScript goes here.</p>
+      </section>
+      <section id="additional-section">
+        <h2>Additional Section</h2>
+        <p>Content related to additional topics like shaders goes here.</p>
+      </section>
+
+      <div class="container">
+        <div id="practices-list">
+          <!-- Best practices will be dynamically added here -->
+        </div>
+        <div id="summary">
+          <h2>Summary</h2>
+          <p id="summary-text"></p>
+          <div id="animal-picture"></div>
+          <div
+            class="progress"
+            role="progressbar"
+            aria-label="Animated striped example"
+            aria-valuenow="75"
+            aria-valuemin="0"
+            aria-valuemax="100"
+          >
+            <div
+              class="progress-bar progress-bar-striped progress-bar-animated"
+              style="width: 100%"
+            ></div>
+          </div>
+        </div>
       </div>
-      <div class="cv-section">
-        <h2>Skills</h2>
-        <ul>
-          <li>JavaScript</li>
-          <li>HTML & CSS</li>
-          <li>Three.js</li>
-          <!-- Add more skills as needed -->
-        </ul>
-      </div>
-      <div class="cv-section">
-        <h2>Experience</h2>
-        <p>Placeholder for experience text...</p>
-      </div>
-      <div class="cv-section">
-        <h2>Education</h2>
-        <p>Placeholder for education text...</p>
-      </div>
-      <div class="cv-section">
-        <h2>References</h2>
-        <p>Placeholder for references...</p>
-      </div>
-      <div class="cv-section">
-        <h2>Sources</h2>
-        <p>
-          References to all the sources used in preparation of this assignment,
-          including AI assistance.
-        </p>
-        <ul>
-          <!-- Add more sources as needed -->
-        </ul>
-      </div>
-    </div>
-    <script type="text/javascript" src="js/shader2.js"></script>
-    <script type="text/javascript" src="js/cv.js"></script>
+    </main>
+
+    <script type="text/javascript" src="js/shader1.js"></script>
+    <script type="text/javascript" src="js/bp.js"></script>
   </body>
 </html>
