adjust cv content css need to be modified
Signed-off-by: ArcueidShiki <52120441+ArcueidShiki@users.noreply.github.com>

--- a/cv.html
+++ b/cv.html
@@ -39,22 +39,10 @@
     <canvas id="glCanvas"></canvas>
     <!-- <a href="index.html">Best Practice</a> -->
     <main>
-      <div id="basic-info"></div>
-
-      <div id="profile"></div>
-
-      <div id="work-experience"></div>
-
-      <div id="skills"></div>
-
-      <div id="education"></div>
-
-      <div id="projects"></div>
-      <div id="languages"></div>
-
+    <!-- cv.js dynmically load infos -->
     </main>
 
-    <!-- <script type="text/javascript" src="js/shader2.js"></script> -->
+    <script type="text/javascript" src="js/shader2.js"></script>
     <script type="text/javascript" src="js/cv.js"></script>
   </body>
 </html>
