--- a/cv.html
+++ b/cv.html
@@ -19,30 +19,17 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/dat.gui@0.7.7/build/dat.gui.min.css"
     />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css"
-      integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap-theme.min.css"
-      integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" , href="css/cv.css" />
+    <link rel="stylesheet" href="css/cv.css" />
     <title>CV</title>
   </head>
   <body>
     <!-- Shader background canvas -->
     <canvas id="glCanvas"></canvas>
-    <!-- <a href="index.html">Best Practice</a> -->
     <main>
-    <!-- cv.js dynmically load infos -->
+      <!-- cv.js dynmically load infos -->
     </main>
 
-    <script type="text/javascript" src="js/shader2.js"></script>
+    <script type="text/javascript" src="js/shader.js"></script>
     <script type="text/javascript" src="js/cv.js"></script>
   </body>
 </html>
