--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" , href="css/bp.css" />
+    <link rel="stylesheet" href="css/bp.css" />
     <title>Best Practices</title>
   </head>
   <body>
@@ -42,7 +42,6 @@
         <li><a href="#HTML-section">HTML</a></li>
         <li><a href="#CSS-section">CSS</a></li>
         <li><a href="#JavaScript-section">JavaScript</a></li>
-        <li><a href="#additional-section">Additional</a></li>
         <li><a href="cv.html">CV</a></li>
         <li><a href="#ref-section">References</a></li>
       </ul>
@@ -54,7 +53,6 @@
         <li><a href="#HTML-section">HTML</a></li>
         <li><a href="#CSS-section">CSS</a></li>
         <li><a href="#JavaScript-section">JavaScript</a></li>
-        <li><a href="#additional-section">Additional</a></li>
         <li><a href="#ref-section">References</a></li>
       </ul>
       <button id="toggle-sidebar-btn" class="btn btn-dark">
@@ -70,8 +68,12 @@
     <!-- Main Content -->
     <main>
       <h1>Best Agile Practices</h1>
+      <p>Click the cards below to select the practices. It was selected when it turned green. If you meet 14/18 practices, you're success!!!</p>
         <div id="practices-list">
           <!-- Best practices will be dynamically added here -->
+        </div>
+        <div id="ref-section">
+          <h2>References</h2>
         </div>
     </main>
 
@@ -96,7 +98,7 @@
     <div id="animal-picture">
     </div>
 
-    <script type="text/javascript" src="js/shader1.js"></script>
+    <script type="text/javascript" src="js/shader.js"></script>
     <script type="text/javascript" src="js/bp.js"></script>
   </body>
 </html>
