--- a/cv.html
+++ b/cv.html
@@ -4,21 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- import libraries -->
-    <script src="https://cdn.jsdelivr.net/npm/three@0.137.5/build/three.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/three@0.137.5/examples/js/controls/OrbitControls.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/dat.gui@0.7.7/build/dat.gui.min.js"></script>
+    <!-- import libraries threejs orbitcontrols dat.gui for future purpose-->
+    <!-- <script src="https://cdn.jsdelivr.net/npm/three@0.137.5/build/three.min.js"></script> -->
+    <!-- <script src="https://cdn.jsdelivr.net/npm/three@0.137.5/examples/js/controls/OrbitControls.min.js"></script> -->
+    <!-- <script src="https://cdn.jsdelivr.net/npm/dat.gui@0.7.7/build/dat.gui.min.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
     />
-    <link
+    <!-- <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/dat.gui@0.7.7/build/dat.gui.min.css"
-    />
+    /> -->
     <link rel="stylesheet" href="css/cv.css" />
     <title>CV</title>
   </head>
@@ -28,7 +27,6 @@
     <main>
       <!-- cv.js dynmically load infos -->
     </main>
-
     <script type="text/javascript" src="js/shader.js"></script>
     <script type="text/javascript" src="js/cv.js"></script>
   </body>
