--- a/cv.html
+++ b/cv.html
@@ -24,6 +24,11 @@
   <body>
     <!-- Shader background canvas -->
     <canvas id="glCanvas"></canvas>
+    <select id="languageSelector" class="language-selector">
+      <option value="jp">日本語</option>
+      <option value="en">English</option>
+      <!-- <option value="zh">中文</option> -->
+    </select>
     <main>
       <!-- cv.js dynmically load infos -->
     </main>
