--- a/cv.html
+++ b/cv.html
@@ -54,8 +54,48 @@
       <!-- cv.js dynamically load infos -->
     </main>
     
+    <!-- Google Maps Section -->
+    <div class="map-section">
+      <h2 class="section-title">📍 Current Location</h2>
+      <div class="map-container">
+        <iframe 
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d387190.27991515207!2d115.7459!3d-31.953512!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2a32966cdb47733d%3A0x304f0b535df55d0!2sPerth%20WA%2C%20Australia!5e0!3m2!1sen!2sau!4v1700000000000!5m2!1sen!2sau" 
+          width="100%" 
+          height="350" 
+          style="border:0; border-radius: 12px;" 
+          allowfullscreen="" 
+          loading="lazy" 
+          referrerpolicy="no-referrer-when-downgrade">
+        </iframe>
+        <div class="location-info">
+          <h3>📍 Perth, Western Australia</h3>
+          <p>Currently pursuing Master's degree and actively seeking software engineering opportunities in the beautiful city of Perth.</p>
+        </div>
+      </div>
+    </div>
+
+    <!-- AI Chatbot Section -->
+    <div class="chatbot-section">
+      <h2 class="section-title">💬 AI Assistant</h2>
+      <div class="chatbot-container">
+        <div class="chat-messages" id="chatMessages">
+          <div class="bot-message">
+            <div class="message-avatar">🤖</div>
+            <div class="message-content">
+              Hi! I'm Jensen's AI assistant powered by DeepSeek. Ask me anything about his experience, skills, or projects!
+            </div>
+          </div>
+        </div>
+        <div class="chat-input-container">
+          <input type="text" id="chatInput" placeholder="Ask about Jensen's experience..." maxlength="500">
+          <button id="sendButton" onclick="sendMessage()">Send</button>
+        </div>
+      </div>
+    </div>
+    
     <script type="text/javascript" src="js/shader.js"></script>
     <script type="text/javascript" src="js/cubes-background.js"></script>
     <script type="text/javascript" src="js/cv-modern.js"></script>
+    <script type="text/javascript" src="js/chatbot.js"></script>
   </body>
 </html>
