--- a/cv.html
+++ b/cv.html
@@ -47,8 +47,8 @@
       </div>
     </div>
     
-    <!-- Print button -->
-    <button id="printBtn" class="print-btn">Print CV</button>
+    <!-- PDF button -->
+    <button id="pdfBtn" class="pdf-btn">📄 PDF Resume</button>
     
     <main>
       <!-- cv.js dynamically load infos -->
