--- a/cv.html
+++ b/cv.html
@@ -106,9 +106,8 @@
         </div>
       </div>
     </div>
-
-    <!-- <script type="text/javascript" src="js/cubes-background.js"></script> -->
     <script type="text/javascript" src="js/ocean-background.js"></script>
+    <script type="text/javascript" src="js/cubes-background.js"></script>
     <script type="text/javascript" src="js/cv-modern.js"></script>
     <script type="text/javascript" src="js/chatbot.js"></script>
   </body>
