--- a/cv.html
+++ b/cv.html
@@ -54,6 +54,9 @@
     <!-- PDF button -->
     <button id="pdfBtn" class="pdf-btn">📄 PDF Resume</button>
     
+    <!-- Game link button -->
+    <a href="paints.html" class="game-link-btn">🎮 Play Game</a>
+    
     <main>
       <!-- cv.js dynamically load infos -->
     </main>
