--- a/paints.html
+++ b/paints.html
@@ -10,10 +10,21 @@
     <div class="game-container">
       <!-- Language Selector -->
       <div class="language-selector">
-        <button class="language-btn" onclick="toggleLanguage()">
-          <span id="langFlag">🇺🇸</span>
-          <span id="langText">EN</span>
+        <button class="language-btn" id="languageBtn">
+          <span class="flag-icon" id="langFlag">🇺🇸</span>
+          <span class="lang-text" id="langText">EN</span>
+          <span class="arrow">▼</span>
         </button>
+        <div id="languageDropdown" class="language-dropdown">
+          <div class="language-option" data-lang="en">
+            <span class="flag">🇺🇸</span>
+            <span>English</span>
+          </div>
+          <div class="language-option" data-lang="zh">
+            <span class="flag">🇨🇳</span>
+            <span>中文</span>
+          </div>
+        </div>
       </div>
 
       <h1 id="gameTitle">🎨 溢彩画游戏</h1>
