--- a/paints.html
+++ b/paints.html
@@ -77,6 +77,13 @@
         <div id="instructionText">选择颜色后点击格子进行染色</div>
       </div>
 
+      <div class="grid-controls">
+        <label for="grid-size-slider" id="gridSizeSliderLabel">调整网格大小:</label>
+        <input type="range" id="grid-size-slider" min="6" max="30" value="12" 
+               oninput="setGridSize(this.value)">
+        <span id="grid-size-display">12</span>
+      </div>
+
       <div class="grid-container">
         <div class="grid" id="gameGrid"></div>
       </div>
